--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -432,6 +432,8 @@ function project(marker, controlPointsData) {
 function loadMarkers() {
   fetch(settings.remap.markers).then(r=>r.json()).then(data=>{
 
+    console.log('loaded ', data.features.length, ' markers');
+
     let markers = L.geoJSON(data, {
       style: f => {color: f.properties.color},
       filter: f=> {
@@ -547,7 +549,6 @@ function loadMarkers() {
       hideMarkerOnCollapse: true,
       initial: false,
     }) );
-
 
   })
 }
