--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -500,7 +500,7 @@ function loadMarkers() {
             a.target = '_blank';
 
             let button = document.createElement('button');
-            button.textContent = 'Go to location';
+            button.textContent = 'Use this location';
             button.onclick = function() { searchLocation(text, marker) }
 
             let spacer = document.createElement('p');
