--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -72,7 +72,7 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
       </ul>
 
     <hr/>
-    <a href="https://github.com/joric/maps/wiki/Fallout-London" class="link" target=_blank><span class="fa-brands fa-wikipedia-w"></span> About This Map</a>
+    <a href="https://github.com/joric/maps/wiki/Fallout-London" class="link" target=_blank><span class="fa-brands fa-wikipedia-w"></span> About the Map</a>
 
     </div>
 
