--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -668,7 +668,7 @@ new L.Toolbar2.Control({
             actions: [
 
               subAction.extend({
-                options:{toolbarIcon:{html:'About This Map', tooltip: ''}},
+                options:{toolbarIcon:{html:'About the Map', tooltip: ''}},
                 addHooks:function() {
                   let url = 'https://github.com/joric/maps/wiki/Fallout-London#remapping';
                   window.open(url, '_blank');
